# point_cloud_matching

./: .gitignore  CMakeLists.txt  Makefile  README.md
cpp/: CMakeLists.txt  interactive_icp.cpp  main.cpp
data/: horse_in_vacuum.ply
